--- a/51.html
+++ b/51.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="vue.js"></script>
+    <script src="node_modules/vue/dist/vue.js"></script>
 </head>
 <body>
 <div id="hdcms">
